--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,19 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/navdrawer_menu"
+            app:headerLayout="@layout/nav_header"
+            />
 
-    <!-- TODO (03) Add the DrawerLayout,containing the content LinearLayout and navHostFragment-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,6 +41,5 @@
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/navigation" />
         </LinearLayout>
-
-        <!-- TODO (04) Add the NavigationView at the bottom of the DrawerLayout -->
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
