--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.marcel
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
@@ -20,14 +20,7 @@
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@menu/navdrawer_menu"
-            app:headerLayout="@layout/nav_header"
-            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,5 +34,13 @@
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/navigation" />
         </LinearLayout>
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/navdrawer_menu"
+            app:headerLayout="@layout/nav_header"
+            />
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
